--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>org.dcsa</groupId>
 	<artifactId>dcsa_event_core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>DCSA-Event-Core</name>
 	<description>Demo project for Spring Boot</description>
 
