--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>11</java.version>
         <groovy.version>3.0.2</groovy.version>
 		<dcsa.version>0.8.2-SNAPSHOT</dcsa.version>
-		<dcsa.tag/>
+		<dcsa.core.tag/>
 		<dcsa.artifacttype/>
 	</properties>
 
@@ -68,7 +68,7 @@
 		<dependency>
 			<groupId>org.dcsa</groupId>
 			<artifactId>dcsa_core</artifactId>
-			<version>${dcsa.version}${dcsa.tag}${dcsa.artifacttype}</version>
+			<version>${dcsa.version}${dcsa.core.tag}${dcsa.artifacttype}</version>
 		</dependency>
 
 		<dependency>
