--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	<properties>
 		<java.version>11</java.version>
         <groovy.version>3.0.2</groovy.version>
-		<dcsa.version>0.8.2-SNAPSHOT</dcsa.version>
+		<dcsa.version>0.8.2</dcsa.version>
 		<dcsa.core.tag/>
-		<dcsa.artifacttype/>
+		<dcsa.artifacttype>-SNAPSHOT</dcsa.artifacttype>
 	</properties>
 
 	<dependencies>
