--- a/.github/workflows/PublishDevSnapshot.yml
+++ b/.github/workflows/PublishDevSnapshot.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    outputs:
+      REF: ${{ steps.dcsa-core-branch.outputs.REF }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up Java JDK
@@ -27,11 +29,17 @@ jobs:
           repositories: '[{ "id": "github", "name": "DCSA Backend repo", "url": "https://maven.pkg.github.com/dcsaorg/DCSA-Core", "releases": { "enabled": "false" }, "snapshots": { "enabled": "true" } }]'
           servers: '[{ "id": "github", "username": "${{ secrets.DCSA_USER }}", "password": "${{ secrets.DCSA_PACKAGES_PAT }}" }]'
 
+      - name: Set Dcsa-Core branch
+        run: |
+        GITHUB_REF=${{ github.ref }}
+        echo "::set-output name=REF::${GITHUB_REF##*/}"
+        id: dcsa-core-branch
+
       - name: Checkout dcsaorg/DCSA-Core
         uses: actions/checkout@v2.3.1
         with:
           repository: dcsaorg/DCSA-Core
-          ref: ${GITHUB_REF##*/}
+          ref: ${{ steps.dcsa-core-branch.outputs.REF }}
           path: DCSA-Core
           token: ${{ secrets.REPO_ACCESS_PAT }}
 
