--- a/.github/workflows/PublishDevSnapshot.yml
+++ b/.github/workflows/PublishDevSnapshot.yml
@@ -44,7 +44,7 @@ jobs:
           token: ${{ secrets.REPO_ACCESS_PAT }}
 
       - name: Set dcsa-core mvn version variable
-        run: cd DCSA-Core && echo "DCSA_CORE_PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)- " >> $GITHUB_ENV
+        run: cd DCSA-Core && echo "DCSA_CORE_PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout -Dchangelist='')- " >> $GITHUB_ENV
 
       - run: echo $DCSA_CORE_PROJECT_VERSION
 
