--- a/.github/workflows/PublishDevSnapshot.yml
+++ b/.github/workflows/PublishDevSnapshot.yml
@@ -12,21 +12,26 @@ jobs:
       REF: ${{ steps.dcsa-core-branch.outputs.REF }}
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up Java JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          distribution: 'temurin'
+          java-version: 17
+
       - name: Set up Maven Central Repository
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          distribution: 'temurin'
+          java-version: 17
           server-id: github
           server-username: ${{ secrets.DCSA_USER }}
           server-password: ${{ secrets.DCSA_PACKAGES_PAT }}
+
       - name: maven-settings-xml-action
         uses: whelk-io/maven-settings-xml-action@v12
         with:
-          repositories: '[{ "id": "github", "name": "DCSA Backend repo", "url": "https://maven.pkg.github.com/dcsaorg/DCSA-Core", "releases": { "enabled": "false" }, "snapshots": { "enabled": "true" } }]'
+          repositories: '[{ "id": "github", "name": "DCSA Backend repo", "url": "https://maven.pkg.github.com/dcsaorg/DCSA-Core", "releases": { "enabled": "true" }, "snapshots": { "enabled": "true" } }]'
           servers: '[{ "id": "github", "username": "${{ secrets.DCSA_USER }}", "password": "${{ secrets.DCSA_PACKAGES_PAT }}" }]'
 
       - name: Set Dcsa-Core branch
