--- a/pom.xml
+++ b/pom.xml
@@ -48,4 +48,15 @@
 		</repository>
 	</distributionManagement>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>github</id>
+			<name>GitHub dcsaorg Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/dcsaorg/DCSA-Core</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
