--- a/.github/workflows/publishPRSnapshot.yml
+++ b/.github/workflows/publishPRSnapshot.yml
@@ -9,17 +9,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up Java JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          distribution: 'temurin'
+          java-version: 17
+
       - name: Set up Maven Central Repository
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          distribution: 'temurin'
+          java-version: 17
           server-id: github
           server-username: ${{ secrets.DCSA_USER }}
           server-password: ${{ secrets.DCSA_PACKAGES_PAT }}
+
       - name: maven-settings-xml-action
         uses: whelk-io/maven-settings-xml-action@v12
         with:
