--- a/.github/workflows/publishRelease.yml
+++ b/.github/workflows/publishRelease.yml
@@ -23,7 +23,7 @@ jobs:
         uses: whelk-io/maven-settings-xml-action@v12
         with:
           repositories: '[{ "id": "github", "name": "DCSA Backend repo", "url": "https://maven.pkg.github.com/dcsaorg/DCSA-Core", "releases": { "enabled": "true" }, "snapshots": { "enabled": "false" } }]'
-          servers: '[{ "id": "github", "username": "${{ secrets.DCSA_USER }}", "password": "${{ secrets.DCSA_PACKAGES_PAT }}" }]'    
+          servers: '[{ "id": "github", "username": "${{ secrets.DCSA_USER }}", "password": "${{ secrets.DCSA_PACKAGES_PAT }}" }]'
 
       - name: Publish package
-        run: mvn -B deploy -Dchangelist=-RELEASE
+        run: mvn -B deploy -Dchangelist=-RELEASE -Ddcsa.shared-kernel.artifacttype=-RELEASE -Ddcsa.artifacttype=-RELEASE
