--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.dcsa</groupId>
 		<artifactId>dcsa-bom</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1-RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
